src/objects/Banana_GAPs_Adoption__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_Fertilizer_Used__c</fullName>
        <label>GAP 1.3 Amount of Fertilizer Used</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>50-60 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 200 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Amount_of_Herbicide_Used__c</fullName>
        <label>GAP 7.5 Amount of Herbicide Used</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>150ml in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not measure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_of_Manure_per_Tree__c</fullName>
        <label>GAP 1.4 Amount of Manure per Tree</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One basin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 basins</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banana_Farmer_GAPs_Selection__c</fullName>
        <label>Banana Farmer GAPs Selection</label>
        <referenceTo>Banana_Farmer_GAPs_Selection__c</referenceTo>
        <relationshipLabel>Banana GAPs Adoptions</relationshipLabel>
        <relationshipName>Banana_GAPs_Adoptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Corm_Removal__c</fullName>
        <label>GAP 2.3 Corm Removal</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fill spaces with well decomposed manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave half the corm attached with bunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split corm into pieces &amp; leave to dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not remove corms</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desuckering_Full_Adoption__c</fullName>
        <formula>IF (TEXT(Number_of_Plants_per_Mat__c)==&apos;Two suckers and a mature plant&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 2 Desuckering Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easy_Access_Agro_Inputs_Adoption__c</fullName>
        <formula>IF (
     OR(TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;Buy from registered input dealers&apos;, 
        TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;Collective purchase&apos;, 
        TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;Seek for guidance from fellow farmers/CKW&apos;, 
        TEXT(Obtain_Quality_Agro_Chemicals__c)==&apos;I call the GF farmer call center for guidance&apos;
     )
     ,&apos;Yes&apos;, &apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 10 Easy Access Agro Inputs Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_of_Value_Addition__c</fullName>
        <label>GAP 9.2 Form of Value Addition</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Banana wine making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana crisps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana flour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pan cakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Frequency_Pesticide_Application__c</fullName>
        <label>GAP 8.2 Frequency Pesticide Application</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Fertilizer_Use__c</fullName>
        <label>GAP 1.6 Frequency of Fertilizer Use</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Weeding__c</fullName>
        <label>GAP 7.2 Frequency of Weeding</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Once a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times in a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GAP_3_Full_Adoption__c</fullName>
        <formula>IF (OR( TEXT(Soil_Water_Conservation_Measures__c)==&apos;Mulching&apos;,
TEXT(Soil_Water_Conservation_Measures__c)==&apos;Digging trenches or terraces&apos;,
TEXT(Soil_Water_Conservation_Measures__c)==&apos;Plant grass across the slope&apos;,
TEXT(Soil_Water_Conservation_Measures__c)==&apos;Plant shade trees or wind breakers&apos;), &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 3 Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAP_6_Full_Adoption__c</fullName>
        <formula>IF (TEXT(Group_Production_and_Marketing__c)==&apos;Yes&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 6 Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Production_and_Marketing__c</fullName>
        <label>GAP 6.1 Group Production and Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kind_of_Records_Kept_Count__c</fullName>
        <formula>IF (INCLUDES(Kind_of_Records_Kept__c, &apos;Production records&apos;), 1, 0) + 
IF (INCLUDES(Kind_of_Records_Kept__c, &apos;Farm planning records&apos;), 1, 0) +
IF (INCLUDES(Kind_of_Records_Kept__c, &apos;Sales records&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 5.2 Kind of Records Kept Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kind_of_Records_Kept__c</fullName>
        <label>GAP 5.2 Kind of Records Kept</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Production records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm planning records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Leaves_Removed_Selection_Count__c</fullName>
        <formula>IF (INCLUDES(Leaves_Removed_in_Desuckering__c, &apos;Old leaves&apos;), 1, 0) +
IF (INCLUDES(Leaves_Removed_in_Desuckering__c, &apos;Dead or dry leaves&apos;), 1, 0) +
IF (INCLUDES(Leaves_Removed_in_Desuckering__c, &apos;Broken leaves&apos;), 1, 0) +
IF (INCLUDES(Leaves_Removed_in_Desuckering__c, &apos;Any excess leaves&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 2.1 Leaves Removed Selection Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leaves_Removed_in_Desuckering__c</fullName>
        <label>GAP 2.1 Leaves Removed in Desuckering</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Old leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead or dry leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaves turning yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any excess leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Means_of_Soil_Fertilization__c</fullName>
        <label>GAP 1.1 Means of Soil Fertilization</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inorganic/chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both manure and inorganic/chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Record_Storage__c</fullName>
        <label>GAP 5.3 Method of Record Storage</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Book/chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory/Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On paper sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_Fertilizer_Manure_Placement__c</fullName>
        <label>GAP 1.7 Mode Fertilizer/Manure Placement</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Placed around the banana plant/mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed in trenches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Plants_per_Mat__c</fullName>
        <label>GAP 2.2 Number of Plants per Mat</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Two suckers and a mature plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three suckers and a mature plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four suckers and a mature plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Obtain_Quality_Agro_Chemicals__c</fullName>
        <label>GAP 10.1 Obtain Quality Agro Chemicals</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Buy from registered input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just buy from any input dealer (Do not mind where I Buy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek for guidance from fellow farmers/CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I call the GF farmer call center for guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use any of these inputs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pest_Disease_Control_Adoption__c</fullName>
        <formula>IF (
	OR(TEXT(Pest_and_Disease_Control_Measure__c) == &apos;Spray with chemicals (pesticides)&apos;, 
		TEXT(Pest_and_Disease_Control_Measure__c) == &apos;Use local technology/cultural means&apos;, 
		TEXT(Pest_and_Disease_Control_Measure__c) == &apos;Use a combination of methods&apos;,
		TEXT(Pest_and_Disease_Control_Measure__c) == &apos;Mechanical means (e.g. uprooting)&apos;
	)
	,&apos;Yes&apos;, &apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 8 Pest &amp; Disease Control Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pest_and_Disease_Control_Measure__c</fullName>
        <label>GAP 8.1 Pest and Disease Control Measure</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spray with chemicals (pesticides)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use local technology/cultural means</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use a combination of methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical means (e.g. uprooting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proper_Record_Keeping_Adoption__c</fullName>
        <formula>IF (
	AND(Kind_of_Records_Kept_Count__c &gt;= 2, OR(TEXT(Method_of_Record_Storage__c) == &apos;Book/chart&apos;, TEXT(Method_of_Record_Storage__c) == &apos;Computer&apos;))
	, &apos;Yes&apos;, &apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 5 Proper Record Keeping Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proper_Weed_Control_Adoption__c</fullName>
        <formula>IF (
	OR(
		AND(
			OR(TEXT(Weed_Control_Methods__c) == &apos;By hand hoeing&apos;, TEXT(Weed_Control_Methods__c) == &apos;Mulching&apos;, TEXT(Weed_Control_Methods__c) == &apos;A combination of methods above&apos;
			),
			OR(TEXT(Frequency_of_Weeding__c) == &apos;. Twice a year&apos;, TEXT(Frequency_of_Weeding__c) == &apos;Thrice a year&apos;, TEXT(Frequency_of_Weeding__c) == &apos;More than 3 times in a year&apos;
			),
			OR(TEXT(Time_of_Weeding__c) == &apos;During the rainy season&apos;, TEXT(Time_of_Weeding__c) == &apos;When weeds are too many&apos;
			)
		), 

		AND(TEXT(Weed_Control_Methods__c) == &apos;Use herbicides&apos;, OR(TEXT(Amount_of_Herbicide_Used__c) == &apos;150ml in 15/20 ltrs of water&apos;, 
																	TEXT(Amount_of_Herbicide_Used__c) == &apos;200mls in 15/20 ltrs of water&apos;, 
																	TEXT(Amount_of_Herbicide_Used__c) == &apos;75mls in 15/20 ltrs of water&apos;
																),
																TEXT(Use_of_Protective_Gear__c) == &apos;Yes&apos;
		)
	)
	,
	&apos;Yes&apos;
	,
	&apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 7 Proper Weed Control Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propping_Full_Adoption__c</fullName>
        <formula>IF (AND( NOT(INCLUDES(Providing_Support_for_Banana__c,&apos;NA&apos;)), 
        NOT(INCLUDES(Providing_Support_for_Banana__c,&apos;When plant has too much leaves&apos;))), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 4 Propping Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Providing_Support_for_Banana__c</fullName>
        <label>GAP 4.1 Providing Support for Banana</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>When plant has bigger bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When plant is attacked by pests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When plant has too much leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the dry season</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pruning_Full_Adoption__c</fullName>
        <formula>IF ( 
	AND(!INCLUDES(Leaves_Removed_in_Desuckering__c, &apos;NA&apos;), !INCLUDES(Leaves_Removed_in_Desuckering__c, &apos;None done&apos;), Leaves_Removed_Selection_Count__c &gt;=2,
		OR(INCLUDES(Corm_Removal__c, &apos;Fill spaces with well decomposed manure&apos;), 
			INCLUDES(Corm_Removal__c, &apos;Leave half the corm attached with bunch&apos;), 
			INCLUDES(Corm_Removal__c, &apos;Split corm into pieces &amp; leave to dry&apos;)
		), 
		OR(INCLUDES(Removal_of_Pseudo_Stems__c, &apos;Cut stem into short pieces &amp; split them&apos;), 
			INCLUDES(Removal_of_Pseudo_Stems__c, &apos;Cut stem at ground level &amp; cover stump&apos;), 
			INCLUDES(Removal_of_Pseudo_Stems__c, &apos;Leave stem standing &amp; remove it later&apos;)
		)
	)
	,
	&apos;Yes&apos;
	,
	&apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 2 Pruning Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_of_Pseudo_Stems__c</fullName>
        <label>GAP 2.4 Removal of Pseudo-Stems</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cut stem into short pieces &amp; split them</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut stem at ground level &amp; cover stump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave stem standing &amp; remove it later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soil_Fertility_Management_Adoption__c</fullName>
        <formula>IF (	
		OR(		AND(TEXT(Means_of_Soil_Fertilization__c) == &apos;Manure&apos;, 	
					OR(TEXT(Amount_of_Manure_per_Tree__c) == &apos;One basin&apos;, 
						TEXT(Amount_of_Manure_per_Tree__c) == &apos;Two basins&apos;
					)
					, Stage_of_Fertilizer_Count__c &gt;=2
					, 	OR(TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Placed around the banana plant/mat&apos;,
							TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Placed in trenches&apos;
						)
					, TEXT(Time_of_Fertilizer_Application__c) == &apos;At the beginning of rains&apos;
				),  

				AND(TEXT(Means_of_Soil_Fertilization__c) == &apos;Inorganic/chemical fertilizer&apos;, 
					AND(!INCLUDES(Type_of_Fertilizers_Used__c, &apos;NA&apos;), 
						!INCLUDES(Type_of_Fertilizers_Used__c, &apos;None used&apos;)
					),
					OR(TEXT(Amount_of_Fertilizer_Used__c) == &apos;50-60 grams&apos;,
						TEXT(Amount_of_Fertilizer_Used__c) == &apos;100 grams&apos;
					),
					Stage_of_Fertilizer_Count__c &gt;=2,
					OR(TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Placed around the banana plant/mat&apos;,
							TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Placed in trenches&apos;
					),
					TEXT(Time_of_Fertilizer_Application__c) == &apos;At the beginning of rains&apos;
				),

				AND(TEXT(Means_of_Soil_Fertilization__c) == &apos;Both manure and inorganic/chemical fertilizer&apos;,
					OR(TEXT(Amount_of_Manure_per_Tree__c) == &apos;One basin&apos;, 
						TEXT(Amount_of_Manure_per_Tree__c) == &apos;Two basins&apos;
					),
					AND(!INCLUDES(Type_of_Fertilizers_Used__c, &apos;NA&apos;), 
						!INCLUDES(Type_of_Fertilizers_Used__c, &apos;None used&apos;)
					),
					OR(TEXT(Amount_of_Fertilizer_Used__c) == &apos;50-60 grams&apos;,
						TEXT(Amount_of_Fertilizer_Used__c) == &apos;100 grams&apos;
					),
					Stage_of_Fertilizer_Count__c &gt;=2,
					OR(TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Placed around the banana plant/mat&apos;,
							TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Placed in trenches&apos;
					),
					TEXT(Time_of_Fertilizer_Application__c) == &apos;At the beginning of rains&apos;
				)
		)
	,
	&apos;Yes&apos;
	,
	&apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 1 Soil Fertility Management Adoption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soil_Water_Conservation_Measures__c</fullName>
        <label>GAP 3.1Soil &amp; Water Conservation Measure</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Digging trenches or terraces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant grass across the slope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant shade trees or wind breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_of_Fertilizer_Application__c</fullName>
        <label>GAP 1.5 Stage of Fertilizer Application</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months after planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At flowering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage_of_Fertilizer_Count__c</fullName>
        <formula>IF (INCLUDES(Stage_of_Fertilizer_Application__c, &apos;At planting&apos;), 1, 0) + 
IF (INCLUDES(Stage_of_Fertilizer_Application__c, &apos;1-2 months after planting&apos;), 1, 0) + 
IF (INCLUDES(Stage_of_Fertilizer_Application__c, &apos;At flowering&apos;), 1, 0) +
IF (INCLUDES(Stage_of_Fertilizer_Application__c, &apos;After Harvesting&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 1.5 Stage of Fertilizer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_of_Fertilizer_Application__c</fullName>
        <label>GAP 1.8 Time of Fertilizer Application</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At the beginning of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Rain season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Later in the season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_of_Weeding__c</fullName>
        <label>GAP 7.3 Time of Weeding</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>During the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When weeds are too many</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Fertilizers_Used__c</fullName>
        <label>GAP 1.2 Type of Fertilizers Used</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Use_Production_Marketing_Record__c</fullName>
        <label>GAP 5.1Use Production &amp; Marketing Record</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_of_Protective_Gear__c</fullName>
        <label>GAP 7.6 Use of Protective Gear</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Addition_Full_Adoption__c</fullName>
        <formula>TEXT(Value_Addition__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 9 Value Addition Full Adoption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Addition__c</fullName>
        <label>GAP 9.1 Value Addition</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weed_Control_Methods__c</fullName>
        <label>GAP 7.1 Weed Control Methods</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>By hand hoeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals feeding on the weeds (grazing animals in the banana garden)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A combination of methods above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>